<resources>
    <string name="app_name">Sharing Hands</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_donor">Donor</string>
    <string name="title_student">Student</string>
    <string name="title_ngo">NGO</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_confirm_pass">Confirm Password</string>
    <string name="title_NGO_registration_number">Registration Number</string>
    <string name="title_address">Address</string>
    <string name="title_activity_ngodashboard">NGODashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_history">History</string>
    <string name="menu_changepass">Change Password</string>
    <string name="menu_donor_logout">Logout</string>
    <string name="menu_donor_delete">Delete Account</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>






</resources>
