<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="50dp"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_changepass"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/donor_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/new_password"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="#11000000"
        />

    <EditText
        android:id="@+id/donor_confirm_passcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_confirm_pass"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:layout_below="@+id/donor_new_password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="#11000000"
        />

    <Button
        android:id="@+id/donor_change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>