<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="35dp"
    android:paddingBottom="15dp"
    tools:context=".ui.NGO.NGORegistration">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/ngo_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_name"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:layout_below="@+id/logo"
        android:background="#11000000"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_adb_black_24dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/reg_no"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:layout_below="@+id/ngo_name"
        android:background="#11000000"
        android:hint="@string/title_NGO_registration_number"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_confirmation_number_black_24dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/ngo_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/reg_no"
        android:background="#11000000"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_address"
        android:inputType="text"
        android:layout_below="@+id/ngo_email_address"
        android:background="#11000000"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_add_location_black_24dp"
        android:textColor="@android:color/white"

        />

    <EditText
        android:id="@+id/ngo_passcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/title_password"
        android:background="#11000000"
        android:layout_below="@+id/address"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/ngo_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/title_confirm_pass"
        android:background="#11000000"
        android:layout_below="@+id/ngo_passcode"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/ngo_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Register"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/progress_circular_ngo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_above="@id/ngo_register"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>