<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="50dp"
    tools:context=".ui.Donor.DonorRegistration">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/donor_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_name"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:layout_below="@+id/logo"
        android:background="#11000000"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_adb_black_24dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/donor_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/title_email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/donor_name"
        android:background="#11000000"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/donor_passcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/title_password"
        android:background="#11000000"
        android:layout_below="@+id/donor_email_address"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/donor_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/title_confirm_pass"
        android:background="#11000000"
        android:layout_below="@+id/donor_passcode"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/donor_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/progress_circular_reg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_above="@id/donor_register"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>